@@ -1,5 +1,10 @@
 2008-09-26  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/examples/list_contacts/main.c: Try to catch connection problems 
+	via the status_changed callback. 
+
+2008-09-26  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/examples/list_contacts/: Added the beginnings of another example.
 	So far it just tries to create the connection so it can later get the 
 	contacts from it.
